# vcrypto-guest

./: .gitignore  CMakeLists.txt
backend/: CMakeLists.txt  cdev.c  cdev.h  ciphers.h  hashmap.c  hashmap.h  main.c  mempool.c  mempool.h  protocol.c  protocol.h  sess.c  sess.h  socket.c  socket.h  util.c  util.h
frontend/: CMakeLists.txt  aes_cbc.c  aes_cbc.h  events.c  events.h  protocol.c  protocol.h  provider.c  provider.h  tongyi_provider.c
frontend/ciphers/: aes_cbc.c  aes_cbc.h
include/: cipher_auth_ctrl.h
utils/: CMakeLists.txt  socket.c  socket.h
